getHomeworksToCheck method in TeacherService updated